Curriculo para download

--- a/Portfolio2/index.html
+++ b/Portfolio2/index.html
@@ -43,7 +43,7 @@
                 <a href="https://www.instagram.com/mslmarcelosilva/" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="doc/Currículo - MARCELO  SILVA LIMA - 2023.docx.pdf" class="btn" download="Currículo">Download CV</a>
         </div>
 
         <div class="profession-container">
