--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <div class="testimonial-slide swiper-slide">
                         <img src="img/1516616367885-removebg-preview.png" alt="">
                         <h3>Silva, Marcelo</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consectetur blandit mauris, nec pellentesque quam bibendum nec. Aliquam quis velit lectus. Nulla in vehicula lorem, eget congue augue. Phasellus non risus nec nulla eleifend auctor quis quis massa. Aenean rhoncus velit lectus, in fringilla odio bibendum in. Sed vestibulum metus diam, in tristique dui hendrerit ac. Mauris vestibulum nulla vel eleifend vestibulum.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consectetur blandit mauris, nec pellentesque quam bibendum nec. Aliquam quis velit lectus. Nulla in vehicula lorem, eget congue augue. Phasellus non risus nec nulla eleifend auctor quis quis massa. Aenean rhoncus velit lectus, in fringilla odio bibendum in. Sed vestibulum metus diam, in tristique dui hezdrerit ac. Mauris vestibulum nulla vel eleifend vestibulum.</p>
                     </div>
                 </div>
 
