--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#contact">Contact</a>
         </nav>
 
-        <div class="bx bx-moon" id="darkMode-icon"></i></div>
+        <div class="bx bx-moon" id="darkMode-icon"></div>
 
         <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -62,7 +62,7 @@
                 </div>
                 <div class="profession" style="--i:3;">
                     <i class='bx bx-id-card' ></i>
-                    <h3>Projetos</h3>
+                    <h3>Projetos Web</h3>
                 </div>
 
                 <div class="circle"></div>
