--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Meu <span>contato!</span></h2>
 
-        <form action="https://formsubmit.co/7253fe88e534d1b8baab8d44ecf263c2" method="post">
+        <form action="https://formsubmit.co/mslmarcelosilva@gmail.com" method="post">
             <div class="input-box">
                 <input type="text" name="name" placeholder="Nome completo" required>
                 <input type="email" name="email" placeholder="Endereço de e-mail" required>
