Ajuste do menu e experiências

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
+            <a href="#about">Sobre mim</a>
+            <a href="#services">Experiências</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
+            <a href="#contact">Contato</a>
         </nav>
 
         <div class="bx bx-moon" id="darkMode-icon"></div>
@@ -90,7 +90,7 @@
     </section>
 
     <section class="services" id="services">
-        <h2 class="heading">Meus <span>serviços</span></h2>
+        <h2 class="heading">Experiências</span></h2>
 
         <div class="services-container">
             
