--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="#about">Sobre mim</a>
+            <a href="#about">Sobre</a>
             <a href="#services">Experiências</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contato</a>
